--- a/views/stockadjustment/stockadjustment.ejs
+++ b/views/stockadjustment/stockadjustment.ejs
@@ -54,12 +54,20 @@
                                 </div>
                                 <div class="row mt-2">
                                     <div class="col-md">
-                                        <textarea class="form-control" id="details" placeholder="Add Details" rows="6"></textarea>
+                                        <input type="text" class="form-control" id="details" placeholder="Add Reference No."></input>
                                     </div>
                                 </div>
                                 <div class="row mt-2">
                                     <div class="col-md">
                                         <textarea class="form-control" id="notes" placeholder="Add Notes" rows="3"></textarea>
+                                    </div>
+                                </div>
+                                <div class="row mt-2">
+                                    <div class="col-md-12">
+                                        <input class="btn btn-outline-inventory w-100" type="file" multiple accept="image/*" placeholder="Attach Pictures or Documents" id="attachments"/>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <div id="selectedDocuments"></div>
                                     </div>
                                 </div>
                             </div>
