--- a/views/dashboard/dashboardscripts.ejs
+++ b/views/dashboard/dashboardscripts.ejs
@@ -14,18 +14,9 @@
         //#region Date Ranger Picker
         $('#dateRange').daterangepicker({
             opens: 'right',
-            startDate: moment().subtract(7, 'days'),
+            startDate: moment(), //@add .subtract(7, 'days') for weekly view
             endDate: moment(),
             maxDate: moment(),
-            // ranges: {
-            //     'Today': [moment(), moment()],
-            //     'Yesterday': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
-            //     'This Week': [moment().startOf('week'), moment().endOf('week')],
-            //     'Last Week': [moment().subtract(1, 'week').startOf('week'), moment().subtract(1, 'week').endOf('week')],
-            //     'This Month': [moment().startOf('month'), moment().endOf('month')],
-            //     'Last Month': [moment().subtract(1, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')],
-            //     'Last 3 Months': [moment().subtract(3, 'months').startOf('month'), moment().endOf('month')],
-            // },
             alwaysShowCalendars: true,
             showCustomRangeLabel: false,
             buttonClasses: ['btn btn-outline-inventory'],
