--- a/views/transferorder/transferorder.ejs
+++ b/views/transferorder/transferorder.ejs
@@ -19,9 +19,10 @@
                                     <tr>
                                         <th class = "col-1">Item ID</th>
                                         <th class = "col-3">Transfer ID</th>
-                                        <th class = "col-3">Product ID</th>
-                                        <th class = "col-3">Description</th>
+                                        <th class = "col-2">Product ID</th>
+                                        <th class = "col-2">Description</th>
                                         <th class = "col-2">Quantity</th>             
+                                        <th class = "col-2">Destination Stocks</th>             
                                     </tr>
                                 </thead>          
                                 <tbody>
@@ -77,7 +78,8 @@
                                         <th class = "col-1">Product ID</th>
                                         <th class = "col-3">Description</th>
                                         <th class = "col-3">To Transfer (Quantity)</th>             
-                                        <th class = "col-3">Branch Stock (From)</th>
+                                        <th class = "col-3">Source Stocks</th>
+                                        <th class = "col-2">Destination Stocks</th>
                                     </tr>
                                 </thead>          
                                 <tbody>
@@ -219,7 +221,8 @@
                                                     <th class = "col-1">Product ID</th>
                                                     <th class = "col-3">Description</th>
                                                     <th class = "col-3">To Transfer (Quantity)</th>             
-                                                    <th class = "col-3">Branch Stock (From)</th>
+                                                    <th class = "col-3">Source Stocks</th>
+                                                    <th class = "col-2">Destination Stocks</th>
                                                 </tr>
                                             </thead>          
                                             <tbody>
@@ -320,13 +323,14 @@
                                             <th class="col-3">Product</th>
                                             <th class="col-2">ID</th>
                                             <th class="col-2">Quantity</th>
-                                            <th class="col-1">Stocks</th>
+                                            <th class="col-1">Source Stocks</th>
+                                            <th class="col-1">Destination Stocks</th>
                                             <th class="col-1"></th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td colspan="5">Select Branch Origin of Transfer to Display Selection</td>
+                                            <td colspan="5">Select Branch Destination of Transfer to Display Selection</td>
                                         </tr>
                                     </tbody>
                                     <tfoot>
