--- a/views/stockadjustment/stockadjustment.ejs
+++ b/views/stockadjustment/stockadjustment.ejs
@@ -166,8 +166,9 @@
                             <thead class="table-header text-black">
                                 <tr>
                                     <th class="text-left h5 col-1">ID</th>
-                                    <th class="text-left h5 col-2">Branch</th>
+                                    <th class="text-left h5 col-1">Branch</th>
                                     <th class="text-left h5 col-1">Branch ID</th>
+                                    <th class="text-left h5 col-1">Reference No.</th>
                                     <th class="text-left h5">Created Date</th>
                                     <th class="text-left h5">Created By</th>
                                     <th class="text-left h5 col-1">Status</th>
